--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,20 @@
 # Maven  
 target/
-pom.xml.tag  
-pom.xml.releaseBackup  
-pom.xml.versionsBackup  
-dependency-reduced-pom.xml  
-release.properties  
 mvnw  
-mvnw.cmd  
-.settings/  
+mvnw.cmd
 
-# Gradle  
-.gradle/  
+# Gradle  - gestore di dipendenze
 /build/
-!gradle/wrapper/gradle-wrapper.jar  
-.gradle-local/
-
-# Dipendenze
-*.jar  
-*.war  
-*.ear  
-*.iml
 
 # IntelliJ IDEA
 .idea/  
-*.iws  
-*.iml  
-*.ipr  
-out/
 
 # Configurazioni sensibili  
-.env  
-*.key  
-*.pem  
-*.p12  
-*.jks  
-*.keystore  
+.env
 
 # File di log e cache
 logs/  
-*.log  
-hs_err_pid*  
-!.gitkeep  
-
-# Database temporanei  
-*.db
+*.log
 
 # Config locali
 config/local-settings.json
